@@ -1,3 +1,7 @@
+[B]Version 1.8.0: July 7th, 2012[/B]
+- New show: Unfilter
+- New show: Coder Radio
+
 [B]Version 1.6.0: April 4th, 2012[/B]
 - New show: TORked
 - Highlighting the most recent and live show titles
